--- a/ujian/public/css/style.css
+++ b/ujian/public/css/style.css
@@ -1,6 +1,6 @@
 .main-content {
   display: grid;
-  grid-template-columns: minmax(250px, 1fr) minmax(250px, 3fr) minmax(250px, 1fr);
+  grid-template-columns: 250px minmax(250px, 3fr) 250px;
   grid-template-rows: 1fr 50px;
   height: calc(100vh - 60px);
 }
